Added offset on routes endpoint, improved overall robustness, added logging
